feat: update locales

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,6 +13,8 @@
     },
     "headings": {
         "skills": "Skills & Interests",
+        "languages": "Languages",
+        "interests": "Interests",
         "cetificates": "Certificates",
         "work": "Experience"
     }
